--- a/templates/index.html
+++ b/templates/index.html
@@ -3,25 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Encrypt and Decrypt</title>
-    <link href="{{ url_for('static', filename='style.css')}}" rel="stylesheet" type="text/css" />
+    <title>Image Encryption</title>
 </head>
 <body>
-    <h1>Image Encryption and Decryption</h1>
-        <img src="{{ image_path }}" alt="Uploaded/Encrypted/Decrypted Image" style="max-width: 400px;"/>
-        <form action="{{ url_for('upload') }}" method="post" enctype="multipart/form-data">
-            <label for="encrypt">Encrypt</label>
-            <input type="file" id="encrypt" name="file" accept="image/*">
-            <input type="submit" value="Encrypt">
-        </form>
-        { % if value %} 
-        <p>{{value}}</p>
-    {% if image_path %}
-        <form action="{{ url_for('decrypt') }}" method="post">
-            <image class="img" src="{{ url_for('static', filename='images/{{ image_path }}')}}" rel="stylesheet" type="text/css" /> 
-            <label for="decrypt">Decrypt</label>
-            <input type="submit" value="Decrypt">
-        </form>
-    {% endif %}
+    <h1>Image Encryption</h1>
+    <form action="/upload" method="post" enctype="multipart/form-data">
+        <label for="file">Select an image:</label>
+        <input type="file" name="file" id="file" required>
+        <br>
+        <label for="password">Enter a password:</label>
+        <input type="password" name="password" id="password" required>
+        <br>
+        <button type="submit">Upload</button>
+    </form>
+    <p>Already have an encrypted image? <a href="/decrypt">Decrypt it here</a>.</p>
 </body>
 </html>
