--- a/templates/index.html
+++ b/templates/index.html
@@ -2,20 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Encryption</title>
 </head>
 <body>
     <h1>Image Encryption</h1>
-    <form action="/upload" method="post" enctype="multipart/form-data">
-        <label for="file">Select an image:</label>
-        <input type="file" name="file" id="file" required>
+    <form action="{{ url_for('upload') }}" method="post" enctype="multipart/form-data">
+        <label for="file">Choose an image:</label>
+        <input type="file" id="file" name="file" accept="image/*" required>
         <br>
-        <label for="password">Enter a password:</label>
-        <input type="password" name="password" id="password" required>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required>
         <br>
-        <button type="submit">Upload</button>
+        <input type="submit" value="Encrypt and Upload">
     </form>
-    <p>Already have an encrypted image? <a href="/decrypt">Decrypt it here</a>.</p>
 </body>
 </html>
