Encrypt dimensions with the bytes data... need to add error handling

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,5 +17,6 @@
         <br>
         <input type="submit" value="Encrypt and Upload">
     </form>
+    <p>Already have an encrypted image? <a href="/decrypt">Decrypt it here</a>.</p>
 </body>
 </html>
