Download added not on server.

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
         <h2>Uploaded Image</h2>
         <img src="data:image/png;base64,{{ original_image_base64 }}" alt="Uploaded Image">
         <br>
-        <a href="{{ url_for('download_encrypted', filename='encrypted_image.png') }}" download>Download Encrypted Image</a>
+        <a href="data:image/png;base64,{{ encrypted_image_data }}" download>Download Encrypted Image</a>
     {% endif %}
     <p>Already have an encrypted image? <a href="/decrypt">Decrypt it here</a>.</p>
 </body>
