added loading message and some error handling.

--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,8 @@
-body {
-    margin: 0;
-    padding: 0;
-    background-color: red;
+
+.loading {
+    display: none;
+}
+
+.visible {
+    display: block;
 }
