--- a/templates/decrypt.html
+++ b/templates/decrypt.html
@@ -4,18 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Decryption</title>
+    <link href="{{ url_for('static', filename='style.css')}}" rel="stylesheet" type="text/css" />
+    <script>
+        function showLoading() {
+            document.getElementById("loading-message").classList.add("visible");
+        }
+    </script>
 </head>
 <body>
     <h1>Image Decryption</h1>
-    <form method="post" enctype="multipart/form-data">
+    <form action="{{ url_for('decrypt') }}" method="post" enctype="multipart/form-data" onsubmit="showLoading()">
         <label for="encrypted_image">Select Encrypted Image:</label>
-        <input type="file" name="encrypted_image" accept="image/*" required>
+        <input type="file" name="encrypted_image" accept=".jpg, .jpeg, .png" required>
         <br>
         <label for="key">Enter Key:</label>
         <input type="text" name="key" required>
         <br>
         <button type="submit">Decrypt</button>
     </form>
+    <div id="loading-message" class="loading">Processing... Please wait.</div>
     {% if decrypted_image %}
         <h2>Decrypted Image</h2>
         <img src="data:image/png;base64,{{ decrypted_image }}" alt="Decrypted Image">
