--- a/templates/index.html
+++ b/templates/index.html
@@ -5,18 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Encryption</title>
+    <link href="{{ url_for('static', filename='style.css')}}" rel="stylesheet" type="text/css" />
+    <script>
+        function showLoading() {
+            document.getElementById("loading-message").classList.add("visible");
+        }
+    </script>
 </head>
 <body>
     <h1>Image Encryption</h1>
-    <form action="{{ url_for('upload') }}" method="post" enctype="multipart/form-data">
+    <form action="{{ url_for('upload') }}" method="post" enctype="multipart/form-data" onsubmit="showLoading()">
         <label for="file">Choose an image:</label>
-        <input type="file" id="file" name="file" accept="image/*" required>
+        <input type="file" id="file" name="file" accept=".jpg, .jpeg, .png" required>
         <br>
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required>
         <br>
         <input type="submit" value="Encrypt and Upload">
     </form>
+    <div id="loading-message" class="loading">Processing... Please wait.</div>
     {% if original_image_base64 %}
         <h2>Uploaded Image</h2>
         <img src="data:image/png;base64,{{ original_image_base64 }}" alt="Uploaded Image">
