--- a/static/style.css
+++ b/static/style.css
@@ -1,8 +1,83 @@
-
-.loading {
+body {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .loading {
     display: none;
-}
-
-.visible {
+  }
+  
+  .visible {
     display: block;
+  }
+  
+  .container {
+    display: flex;
+    width: 100vw;
+    height: 90vh;
+    flex-direction: row;
+  }
+  
+  .encrypt {
+
+  }
+  
+  .title {
+    text-align: center;
+  }
+  
+  .tutorial {
+    background-color: #632dc8;
+    color: white;
+  }
+  
+  .input {
+    display: none;
+  }
+  
+  .encrypt,
+  .tutorial {
+    flex: 1;
+    /* Equal flex distribution */
+    box-sizing: border-box;
+    padding: 20px;
+  }
+  
+  .upload {
+    background-color: rgb(219, 219, 219);
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+  }
+  
+  .lb-pass {
+    margin-bottom: 15px;
+  }
+  
+  .pass {
+    margin: 10px 0;
+    
+  }
+  
+  #uploaded-image-container {
+    
+  }
+  
+  #uploaded-image {
+    display: none;
+    max-width: 100%; 
+      max-height: 100%; 
+      margin: auto;
+  }
+  
+  .down-enc {
+    margin-top: 15px;
+  }
+
+.decrypt {
+    text-align: center;
 }
