--- a/templates/index.html
+++ b/templates/index.html
@@ -5,32 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Encryption</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="{{ url_for('static', filename='style.css')}}" rel="stylesheet" type="text/css" />
-    <script>
-        function showLoading() {
-            document.getElementById("loading-message").classList.add("visible");
-        }
-
-        function previewImage(input) {
-            const file = input.files[0];
-            if (file) {
-                const reader = new FileReader();
-                reader.onload = function (e) {
-                    document.getElementById("uploaded-image").src = e.target.result;
-                    document.getElementById("uploaded-image-container").style.display = "block";
-                    document.getElementById("uploaded-image").style.display = "block";
-                    document.getElementById("upload-stat").style.display = "none";
-                };
-
-                reader.readAsDataURL(file);
-            }
-        }
-    </script>
 </head>
 <body>
-    <div class="container">
+    <div class="container2">
       <div class="tutorial">
-        <h2>Steps</h2>
+        <h2>Tutorial</h2>
         <ol>
           <li>Upload an image to be encrypted</li>
           <li>Add a password to be able to decrypt the image</li>
@@ -53,15 +34,17 @@
                 </div>
             </label>
             <input class="input" type="file" id="file" name="file" accept=".jpg, .jpeg, .png" required onchange="previewImage(this)">
-            <br>
-            <label class="lb-pass" for="password">Password:</label>
-            <br>
-            <input class="pass" type="password" id="password" name="password" required>
-            <br>
-            <input type="submit" value="Encrypt and Upload">
+            <div class="form-group">
+                <label class="lb-pass" for="password">Password:</label>
+                <input class="form-control pass" type="password" id="password" name="password" required>
+            </div>
+            <button type="submit" class="btn btn-custom">Encrypt and Upload</button>
         </form>
         <div class="down-enc">
         {% if encrypted_image_data %}
+            <div class="alert alert-success">
+                Encryption successful! You can now download the encrypted image.
+            </div>
           <a href="data:image/png;base64,{{ encrypted_image_data }}" download>Download Encrypted Image</a>
         {% endif %}
         </div>
@@ -69,8 +52,27 @@
        </div>
     </div>
     <div class="decrypt">
-
       <p>Already have an encrypted image? <a href="/decrypt">Decrypt it here</a>.</p>
     </div>
+    <script>
+        function showLoading() {
+            document.getElementById("loading-message").classList.add("visible");
+        }
+
+        function previewImage(input) {
+            const file = input.files[0];
+            if (file) {
+                const reader = new FileReader();
+                reader.onload = function (e) {
+                    document.getElementById("uploaded-image").src = e.target.result;
+                    document.getElementById("uploaded-image-container").style.display = "block";
+                    document.getElementById("uploaded-image").style.display = "block";
+                    document.getElementById("upload-stat").style.display = "none";
+                };
+
+                reader.readAsDataURL(file);
+            }
+        }
+    </script>
 </body>
 </html>
