--- a/templates/index.html
+++ b/templates/index.html
@@ -23,10 +23,10 @@
       </div>  
       <div class="encrypt">
         <h1 class="title">Image Encryption</h1>
-        <form action="{{ url_for('upload') }}" method="post" enctype="multipart/form-data" onsubmit="showLoading()">
+        <form action="{{ url_for('upload') }}" method="post" enctype="multipart/form-data" onsubmit="return validateForm()">
             <label for="file" class="file-label">
                 <div class="upload" id="uploaded-image-container">
-                    <p id="upload-stat">Upload</p>
+                    <p id="upload-stat">Click to Upload</p>
                     <img id="uploaded-image" src="data:image/png;base64,{{ original_image_base64 }}" alt="Uploaded Image">
                     {% if original_image_base64 %}
                         <img id="uploaded-image" src="data:image/png;base64,{{ original_image_base64 }}" alt="Uploaded Image">
@@ -73,6 +73,20 @@
                 reader.readAsDataURL(file);
             }
         }
+
+        function validateForm() {
+        const password = document.getElementById("password").value;
+        const lettersOnly = /^[A-Za-z]+$/;
+
+        if (!password.match(lettersOnly)) {
+            alert("Password must contain only letters.");
+            return false;
+        }
+
+        showLoading();
+        return true;
+    }
+        
     </script>
 </body>
 </html>
